@@ -1,4 +1,4 @@
-$Id: History,v 1.6 1999-04-22 21:51:06 asaim Exp $
+$Id: History,v 1.7 1999-05-17 16:17:38 stesting Exp $
 -------------------------------------------------------------------
 
      =========================================================
@@ -16,6 +16,10 @@ committal in the CVS repository !
      ----------------------------------------------------------
      * Reverse chronological order (last date on top), please *
      ----------------------------------------------------------
+
+May 17, 99 J.Allison
+- In G4RunManager.cc, moved G4Timer.hh to prevent conflict with ObjectSpace
+  on Sun when using the STL Interface.
 
 Apr 22, 99 M.Asai (tag run-01-00-04)
 - Now run ID is set by G4RunManager.
